+ first positive SMB test

--- a/etc/file_magic.conf
+++ b/etc/file_magic.conf
@@ -163,3 +163,4 @@ file type:MP4;  id:168; category:Multimedia; msg:"MPEG-4 video files"; rev:1; co
 file type:MP4;  id:169; category:Multimedia; msg:"MPEG-4 video files"; rev:1; content:| 66 74 79 70 4D 53 4E 56 |; offset:4;
 file type:DICM;  id:170; category:Multimedia; msg:"Digital Imaging and Communications in Medicine"; rev:1; content:| 44 49 43 4D |; offset:128;
 file type:ZIP_ENC; id:171; category:Archive; msg:"PKZIP encrypted archive file"; rev:1; content:| 50 4B 03 04 |; offset:0; content:| 01 |; offset:6; 
+file type:CTEST; id:172; category:Text; msg:"c source file"; rev:1; content:| 73 74 61 74 |; offset:0;
