--- a/etc/snort.conf
+++ b/etc/snort.conf
@@ -155,3 +155,6 @@ preprocessor pop: \
    qp_decode_depth 0 \
    bitenc_decode_depth 0 \
    uu_decode_depth 0
+
+preprocessor dcerpc2: memcap 102400
+preprocessor dcerpc2_server: default, smb_file_inspection [ on, file-depth 5555555 ]
